{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 39,
  "lineage": "eb87fe74-2d34-0461-d0dd-7970b1f52cbb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0508ae6010f662f97",
            "association_id": "eipassoc-0ee9cd6d50355e755",
            "domain": "vpc",
            "id": "eipalloc-0508ae6010f662f97",
            "instance": "i-05d328f066968594f",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-06b4438fa4cde6224",
            "private_dns": "ip-10-0-0-167.eu-west-1.compute.internal",
            "private_ip": "10.0.0.167",
            "public_dns": "ec2-34-248-154-128.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.248.154.128",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.services",
            "aws_internet_gateway.main",
            "aws_key_pair.ssh_key",
            "aws_route_table.main_route_table",
            "aws_route_table_association.route_table_association",
            "aws_security_group.jitsi",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu",
            "random_id.jicofo_auth_password",
            "random_id.jicofo_component_secret",
            "random_id.jvb_auth_password",
            "random_id.jwt_app_secret"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0025f97dc2178caae",
            "association_id": "eipassoc-0cbfc2d7db965aed0",
            "domain": "vpc",
            "id": "eipalloc-0025f97dc2178caae",
            "instance": "i-01bb27277600fb2bc",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-00ac8fb6e69609e80",
            "private_dns": "ip-10-0-0-148.eu-west-1.compute.internal",
            "private_ip": "10.0.0.148",
            "public_dns": "ec2-52-49-93-133.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.93.133",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.services",
            "aws_internet_gateway.main",
            "aws_key_pair.ssh_key",
            "aws_route_table.main_route_table",
            "aws_route_table_association.route_table_association",
            "aws_security_group.jitsi",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu",
            "random_id.jicofo_auth_password",
            "random_id.jicofo_component_secret",
            "random_id.jvb_auth_password",
            "random_id.jwt_app_secret"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c04d36d757d27e2",
            "association_id": "eipassoc-0842447f22be55c27",
            "domain": "vpc",
            "id": "eipalloc-03c04d36d757d27e2",
            "instance": "i-03995a1261d17d4ac",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-035d8949883646ce8",
            "private_dns": "ip-10-0-0-64.eu-west-1.compute.internal",
            "private_ip": "10.0.0.64",
            "public_dns": "ec2-3-255-15-132.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.255.15.132",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.services",
            "aws_internet_gateway.main",
            "aws_key_pair.ssh_key",
            "aws_route_table.main_route_table",
            "aws_route_table_association.route_table_association",
            "aws_security_group.jitsi",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu",
            "random_id.jicofo_auth_password",
            "random_id.jicofo_component_secret",
            "random_id.jvb_auth_password",
            "random_id.jwt_app_secret"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06045fa39d40a8add",
            "association_id": "eipassoc-036bfb139727d25da",
            "domain": "vpc",
            "id": "eipalloc-06045fa39d40a8add",
            "instance": "i-082706d30f377248b",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-089ede175b5f500a0",
            "private_dns": "ip-10-0-0-25.eu-west-1.compute.internal",
            "private_ip": "10.0.0.25",
            "public_dns": "ec2-34-248-80-72.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.248.80.72",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.services",
            "aws_internet_gateway.main",
            "aws_key_pair.ssh_key",
            "aws_route_table.main_route_table",
            "aws_route_table_association.route_table_association",
            "aws_security_group.jitsi",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu",
            "random_id.jicofo_auth_password",
            "random_id.jicofo_component_secret",
            "random_id.jvb_auth_password",
            "random_id.jwt_app_secret"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a04aac60f67af351",
            "association_id": "eipassoc-038500843aafdb581",
            "domain": "vpc",
            "id": "eipalloc-0a04aac60f67af351",
            "instance": "i-0904a7fe561f6225a",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-09b71b29d0f11c590",
            "private_dns": "ip-10-0-0-145.eu-west-1.compute.internal",
            "private_ip": "10.0.0.145",
            "public_dns": "ec2-54-228-182-111.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.228.182.111",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.services",
            "aws_internet_gateway.main",
            "aws_key_pair.ssh_key",
            "aws_route_table.main_route_table",
            "aws_route_table_association.route_table_association",
            "aws_security_group.jitsi",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu",
            "random_id.jicofo_auth_password",
            "random_id.jicofo_component_secret",
            "random_id.jvb_auth_password",
            "random_id.jwt_app_secret"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:716052451530:instance/i-05d328f066968594f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d328f066968594f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jitsi-dev.meet.alve.live",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b4438fa4cde6224",
            "private_dns": "ip-10-0-0-167.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.167",
            "public_dns": "ec2-34-248-154-128.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.248.154.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-088589f1ac95b15b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080074bab54408a0a",
            "tags": {
              "Name": "euw1-main-xmpp-1.dev.meet.alve.live"
            },
            "tags_all": {
              "Name": "euw1-main-xmpp-1.dev.meet.alve.live"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fefbbddff394c5a7"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_key_pair.ssh_key",
            "aws_route_table.main_route_table",
            "aws_route_table_association.route_table_association",
            "aws_security_group.jitsi",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu",
            "random_id.jicofo_auth_password",
            "random_id.jicofo_component_secret",
            "random_id.jvb_auth_password",
            "random_id.jwt_app_secret"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:716052451530:instance/i-01bb27277600fb2bc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01bb27277600fb2bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jitsi-dev.meet.alve.live",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00ac8fb6e69609e80",
            "private_dns": "ip-10-0-0-148.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.148",
            "public_dns": "ec2-52-49-93-133.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.93.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03cd5dd9d444b3337",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080074bab54408a0a",
            "tags": {
              "Name": "euw1-main-jicofo-1.dev.meet.alve.live"
            },
            "tags_all": {
              "Name": "euw1-main-jicofo-1.dev.meet.alve.live"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fefbbddff394c5a7"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_key_pair.ssh_key",
            "aws_route_table.main_route_table",
            "aws_route_table_association.route_table_association",
            "aws_security_group.jitsi",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu",
            "random_id.jicofo_auth_password",
            "random_id.jicofo_component_secret",
            "random_id.jvb_auth_password",
            "random_id.jwt_app_secret"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:716052451530:instance/i-03995a1261d17d4ac",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03995a1261d17d4ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jitsi-dev.meet.alve.live",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-035d8949883646ce8",
            "private_dns": "ip-10-0-0-64.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.64",
            "public_dns": "ec2-3-255-15-132.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.255.15.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f947c2db19aab95",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080074bab54408a0a",
            "tags": {
              "Name": "euw1-main-jvb-1.dev.meet.alve.live"
            },
            "tags_all": {
              "Name": "euw1-main-jvb-1.dev.meet.alve.live"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fefbbddff394c5a7"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_key_pair.ssh_key",
            "aws_route_table.main_route_table",
            "aws_route_table_association.route_table_association",
            "aws_security_group.jitsi",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu",
            "random_id.jicofo_auth_password",
            "random_id.jicofo_component_secret",
            "random_id.jvb_auth_password",
            "random_id.jwt_app_secret"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:716052451530:instance/i-082706d30f377248b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082706d30f377248b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jitsi-dev.meet.alve.live",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-089ede175b5f500a0",
            "private_dns": "ip-10-0-0-25.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.25",
            "public_dns": "ec2-34-248-80-72.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.248.80.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec7d774bb9489340",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080074bab54408a0a",
            "tags": {
              "Name": "euw1-main-jvb-2.dev.meet.alve.live"
            },
            "tags_all": {
              "Name": "euw1-main-jvb-2.dev.meet.alve.live"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fefbbddff394c5a7"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_key_pair.ssh_key",
            "aws_route_table.main_route_table",
            "aws_route_table_association.route_table_association",
            "aws_security_group.jitsi",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu",
            "random_id.jicofo_auth_password",
            "random_id.jicofo_component_secret",
            "random_id.jvb_auth_password",
            "random_id.jwt_app_secret"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:716052451530:instance/i-0904a7fe561f6225a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0904a7fe561f6225a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jitsi-dev.meet.alve.live",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09b71b29d0f11c590",
            "private_dns": "ip-10-0-0-145.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.145",
            "public_dns": "ec2-54-228-182-111.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.228.182.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db0b9e22d8552067",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080074bab54408a0a",
            "tags": {
              "Name": "euw1-main-jvb-3.dev.meet.alve.live"
            },
            "tags_all": {
              "Name": "euw1-main-jvb-3.dev.meet.alve.live"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fefbbddff394c5a7"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_key_pair.ssh_key",
            "aws_route_table.main_route_table",
            "aws_route_table_association.route_table_association",
            "aws_security_group.jitsi",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu",
            "random_id.jicofo_auth_password",
            "random_id.jicofo_component_secret",
            "random_id.jvb_auth_password",
            "random_id.jwt_app_secret"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:716052451530:internet-gateway/igw-0695fdd2c5fa6d02e",
            "id": "igw-0695fdd2c5fa6d02e",
            "owner_id": "716052451530",
            "tags": {
              "Name": "InternetGateway Jitsi"
            },
            "tags_all": {
              "Name": "InternetGateway Jitsi"
            },
            "vpc_id": "vpc-0a7655ee6db79ef94"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:716052451530:route-table/rtb-0b0a914371b3bb043",
            "id": "rtb-0b0a914371b3bb043",
            "owner_id": "716052451530",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0695fdd2c5fa6d02e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7655ee6db79ef94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f200eb64a5dfd5d",
            "route_table_id": "rtb-0b0a914371b3bb043",
            "subnet_id": "subnet-080074bab54408a0a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main_route_table",
            "aws_subnet.main",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jitsi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:716052451530:security-group/sg-0fefbbddff394c5a7",
            "description": "Jitsi",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fefbbddff394c5a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 10000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5222,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5222
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5269,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5269
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5280,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5280
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5347,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5347
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "Jitsi sg",
            "name_prefix": "",
            "owner_id": "716052451530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jitsi sg"
            },
            "tags_all": {
              "Name": "Jitsi sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7655ee6db79ef94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:716052451530:subnet/subnet-080074bab54408a0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080074bab54408a0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "716052451530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet Jitsi"
            },
            "tags_all": {
              "Name": "Subnet Jitsi"
            },
            "vpc_id": "vpc-0a7655ee6db79ef94"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:716052451530:vpc/vpc-0a7655ee6db79ef94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084801cafe899c245",
            "default_route_table_id": "rtb-078cf8e17953557b2",
            "default_security_group_id": "sg-0ed3d1c8809078191",
            "dhcp_options_id": "dopt-0a91b022c513b5717",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7655ee6db79ef94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078cf8e17953557b2",
            "owner_id": "716052451530",
            "tags": {
              "Name": "Main vpc Jitsi"
            },
            "tags_all": {
              "Name": "Main vpc Jitsi"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}